--- a/Felix_Atsu_Ackuayi_ShoppinCart_201105/styles.css
+++ b/Felix_Atsu_Ackuayi_ShoppinCart_201105/styles.css
@@ -78,7 +78,8 @@ li a{
     text-decoration: none;
 }
 
-.container{
+.container,
+  .products-container {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -115,4 +116,68 @@ li a{
     opacity: 1;
     padding: 10px;
     text-decoration: none;
+}
+
+
+
+/*************************************************CART PAGE****************/
+.products-container{
+    max-width: 650px;
+    justify-content: space-around;
+    margin: 0 auto;
+     margin-top: 50px;
+
+}
+
+
+.products-container ion-icon{
+    font-size: 25px;
+    color: blue;
+    margin-left: 10px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+
+.product-header{
+    width: 100%;
+    max-width: 650px;
+    display: flex;
+    justify-content: flex-start;
+    border-bottom: 4px solid lightblue;
+    margin: 0 auto;
+}
+
+.product-title{
+    width: 45%;
+}
+
+.price{
+    width: 15%;
+    //border-bottom: 4px solid lightblue;
+    display: flex;
+    align-items: center;
+}
+
+.quantity{
+    width: 30%;
+    //border-bottom: 4px solid lightblue;
+    display: flex;
+    align-items: center;
+}
+
+.total{
+    width: 10%;
+    //border-bottom: 4px solid lightblue;
+    display: flex;
+    align-items: center;
+}
+
+.product{
+    width: 45%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px 0;
+    border-bottom: 1px solid lightblue;
 }
